@@ -11,5 +11,15 @@ AX_PTHREAD([], [AC_MSG_ERROR([requires pthread])])
 AM_INIT_AUTOMAKE([foreign
                   subdir-objects])
 AC_CONFIG_FILES([Makefile])
-PKG_CHECK_MODULES([CMOCKA],[cmocka])
+AC_ARG_ENABLE([unit],
+            [AS_HELP_STRING([--enable-unit],
+                            [build cmocka unit tests (default is no)])],
+            [enable_unit=$enableval],
+            [enable_unit=no])
+AS_IF([test "x$enable_unit" != xno],
+      [PKG_CHECK_MODULES([CMOCKA],
+                         [cmocka],
+                         [AC_DEFINE([HAVE_CMOCKA],
+                                    [1])])])
+AM_CONDITIONAL([UNIT], [test "x$enable_unit" != xno])
 AC_OUTPUT
